samples/_failures_safe/1761157878_f48511_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d27c542.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6d27c542.c:173:31: error: expected ‘]’ at end of input
  173 |             tokens[token_count
      |                               ^
      |                               ]
./samples/SAFE/__tmp_6d27c542.c:173:13: error: expected declaration or statement at end of input
  173 |             tokens[token_count
      |             ^~~~~~
./samples/SAFE/__tmp_6d27c542.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d27c542.c:173:13: error: expected declaration or statement at end of input
